--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-CLIENT_ID=24e4c938-e59b-452b-afc9-8d60d5b1602a
-CLIENT_SECRET=Yff6gX3B60dwMUhmIzvBGV5-v
-API_ENVIRONMENT=
+CLIENT_ID=df225779-9c53-4243-873b-a108fceb7012
+CLIENT_SECRET=MmDqYrRAXERr2i5SnVs5sJsaQt
+API_ENVIRONMENT=prod
