--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-CLIENT_ID=df225779-9c53-4243-873b-a108fceb7012
-CLIENT_SECRET=MmDqYrRAXERr2i5SnVs5sJsaQt
+CLIENT_ID=clientId
+CLIENT_SECRET=clientSecret
 API_ENVIRONMENT=prod
